feat(easyStore): add easyStore

--- a/examples/package.json
+++ b/examples/package.json
@@ -8,7 +8,9 @@
     "classnames": "2.2.5",
     "react": "15.5.4",
     "react-dom": "15.5.4",
-    "react-easy-state": "1.0.4"
+    "react-easy-state": "1.0.4",
+    "react-router": "4.1.1",
+    "react-router-dom": "4.1.1"
   },
   "devDependencies": {
     "babel-core": "6.24.1",
