--- a/examples/package.json
+++ b/examples/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "classnames": "2.2.5",
+    "moment": "2.18.1",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-easy-state": "1.0.4",
