--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "dist/easyState.js",
   "module": "src/index.js",
   "scripts": {
-    "test": "nyc --reporter=lcov --reporter=text mocha src/*.test.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:validate": "jest-html --css-patterns ../style.css",
+    "test:update": "jest --updateSnapshot",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard src/*",
     "build": "webpack",
-    "build-examples": "webpack --config ./examples/webpack.config.js",
-    "build-examples-dev": "webpack --config ./examples/webpack.config.js --watch",
+    "build-examples": "webpack --config ./webpack.examples.js",
+    "build-examples-dev": "webpack --config ./webpack.examples.js --watch",
     "build-all": "npm run build && npm run build-examples"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-html"
+    ],
+    "collectCoverageFrom": [
+      "**/src/**"
+    ]
   },
   "author": {
     "name": "Miklos Bertalan",
@@ -41,14 +53,25 @@
     "@nx-js/observer-util": "3"
   },
   "devDependencies": {
+    "babel-core": "6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "3.5.0",
-    "enzyme": "^2.8.2",
-    "mocha": "2.5.3",
+    "classnames": "2.2.5",
+    "coveralls": "^2.13.1",
+    "enzyme": "^2.9.1",
+    "enzyme-to-json": "^1.5.1",
+    "jest": "20.0.4",
+    "moment": "2.18.1",
     "nyc": "10.3.2",
     "pre-push": "0.1.1",
-    "reify": "0.11.0",
-    "sinon": "2.3.1",
-    "sinon-chai": "2.10.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "sinon": "^2.3.1",
     "standard": "7.1.2",
     "webpack": "2.4.1"
   },
@@ -58,11 +81,7 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "standard": {
-    "ignore": [
-      "src/*.test.js"
-    ]
-  },
+  "standard": {},
   "pre-push": [
     "lint",
     "test"
