--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:validate": "jest-html --css-patterns ../style.css",
     "test:update": "jest --updateSnapshot",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "lint": "standard src/*",
+    "lint": "standard",
+    "lint:fix": "standard --fix",
     "build": "webpack",
     "build-examples": "webpack --config ./webpack.examples.js",
     "build-examples-dev": "webpack --config ./webpack.examples.js --watch",
@@ -53,27 +54,28 @@
     "@nx-js/observer-util": "3"
   },
   "devDependencies": {
-    "babel-core": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
-    "babel-loader": "7.0.0",
+    "babel-loader": "7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "3.5.0",
+    "chai": "4.1.1",
     "classnames": "2.2.5",
     "coveralls": "^2.13.1",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "jest": "20.0.4",
     "moment": "2.18.1",
-    "nyc": "10.3.2",
+    "nyc": "11.1.0",
     "pre-push": "0.1.1",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "sinon": "^2.3.1",
-    "standard": "7.1.2",
-    "webpack": "2.4.1"
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "sinon": "3.1.0",
+    "standard": "10.0.3",
+    "webpack": "^3.5.2"
   },
   "peerDependencies": {
     "react": "*"
@@ -81,7 +83,15 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "standard": {},
+  "standard": {
+    "parser": "babel-eslint",
+    "env": [
+      "jest"
+    ],
+    "ignore": [
+      "dist/*"
+    ]
+  },
   "pre-push": [
     "lint",
     "test"
