fix (jest): fix jest snapshotSerializer path config

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "jest": {
     "snapshotSerializers": [
-      "<rootDir>/node_modules/jest-html"
+      "./node_modules/jest-html"
     ],
     "collectCoverageFrom": [
       "**/src/**"
