--- a/package.json
+++ b/package.json
@@ -59,15 +59,14 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "7.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "4.1.1",
     "classnames": "2.2.5",
     "coveralls": "^2.13.1",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "jest": "20.0.4",
+    "jest-html": "^1.3.4",
     "moment": "2.18.1",
     "nyc": "11.1.0",
     "pre-push": "0.1.1",
