test (examples): test examples and improve coverage in them

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
       "./node_modules/jest-html"
     ],
     "collectCoverageFrom": [
-      "**/src/**"
+      "**/src/**",
+      "**/examples/**",
+      "!**/examples/**/index.jsx"
     ]
   },
   "author": {
