--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["react", "es2015", "stage-0"]
+  "env": {
+    "development": {
+      "presets": ["react", "es2016", "es2017", "stage-0"]
+    },
+    "test": {
+      "presets": ["react", "es2016", "es2017", "stage-0"],
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
