--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-easy-state",
   "version": "2.0.1",
   "description": "React Easy State provides a healthy balance of local and global state management in a simple, scalable way",
-  "main": "dist/es5.js",
-  "module": "dist/es6/index.js",
+  "main": "dist/easyState.commonJS.js",
+  "module": "dist/easyState.module/index.js",
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -12,7 +12,7 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "build": "babel ./src --out-dir dist/es6 && webpack",
+    "build": "babel ./src --out-dir dist/easyState.module && webpack",
     "build-examples": "webpack --config ./webpack.examples.js",
     "build-examples-dev": "webpack --config ./webpack.examples.js --watch",
     "build-all": "npm run build && npm run build-examples"
@@ -61,7 +61,9 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "2.2.5",
