--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,6 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      - run: npm run lint
       - run: npm test
       - run: npm run coveralls
