--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-easy-state",
   "version": "2.0.2",
   "description": "React Easy State provides a healthy balance of local and global state management in a simple, scalable way",
-  "main": "dist/easyState.commonJS.js",
-  "module": "dist/easyState.module/index.js",
+  "main": "dist/easyState.es5.cjs.js",
+  "module": "dist/easyState.es5.cjs.js",
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -12,10 +12,11 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "build": "babel ./src --out-dir dist/easyState.module && webpack",
+    "build": "webpack --config ./webpack.config.js",
     "build-examples": "webpack --config ./webpack.examples.js",
     "build-examples-dev": "webpack --config ./webpack.examples.js --watch",
-    "build-all": "npm run build && npm run build-examples"
+    "build-all": "npm run build && npm run build-examples && npm run transpile",
+    "transpile": "babel dist/easyState.cjs.js --out-file dist/easyState.es5.cjs.js --presets=es2015"
   },
   "jest": {
     "snapshotSerializers": [
@@ -62,6 +63,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
