--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "version": "3.0.0",
   "description": "React Easy State provides a healthy balance of local and global state management in a simple, scalable way",
   "main": "dist/cjs.es5.js",
-  "module": "dist/esm.es5.js",
+  "module": "dist/es.es5.js",
   "files": [
     "dist"
   ],
   "scripts": {
     "test": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:validate": "jest-html --css-patterns ../style.css",
-    "test:update": "jest --updateSnapshot",
+    "test-watch": "jest --watch",
+    "test-validate": "jest-html --css-patterns ../style.css",
+    "test-update": "jest --updateSnapshot",
+    "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint:fix": "standard --fix",
+    "lint-fix": "standard --fix",
     "build-examples": "webpack --config ./webpack.examples.js",
     "build-examples-dev": "webpack --config ./webpack.examples.js --watch",
-    "build": "rollup --config ./rollup.config.js && npm run transpile && npm run minify",
-    "transpile": "buble dist/cjs.es6.js --yes dangerousForOf -o dist/cjs.es5.js && buble dist/esm.es6.js --yes dangerousForOf --no modules -o dist/esm.es5.js",
-    "minify": "minify dist/cjs.es6.js --o dist/cjs.es6.min.js && minify dist/cjs.es5.js --o dist/cjs.es5.min.js && minify dist/esm.es6.js --o dist/esm.es6.min.js && minify dist/esm.es5.js --o dist/esm.es5.min.js"
+    "build": "node ./scripts/build.js"
   },
   "jest": {
     "snapshotSerializers": [
@@ -58,7 +57,10 @@
     "es6 proxy"
   ],
   "dependencies": {
-    "@nx-js/observer-util": "3"
+    "@nx-js/observer-util": "^3.1.2"
+  },
+  "peerDependencies": {
+    "react": "*"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -67,6 +69,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "7.1.1",
     "babel-minify": "^0.2.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -75,6 +78,7 @@
     "buble": "^0.15.2",
     "classnames": "2.2.5",
     "coveralls": "^2.13.1",
+    "del": "^3.0.0",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "jest": "20.0.4",
@@ -86,14 +90,12 @@
     "react-dom": "15.6.1",
     "react-test-renderer": "^15.6.1",
     "rollup": "^0.49.0",
+    "rollup-plugin-auto-external": "^1.0.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "sinon": "3.1.0",
     "standard": "10.0.3",
     "webpack": "^3.5.2"
-  },
-  "peerDependencies": {
-    "react": "*"
   },
   "engines": {
     "node": ">=6.0.0"
