--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
     "lint-fix": "standard --fix",
-    "build-examples": "webpack --config ./webpack.examples.js",
-    "build-examples-dev": "webpack --config ./webpack.examples.js --watch",
+    "build-examples": "node ./scripts/buildExamples.js",
+    "build-examples-watch": "node ./scripts/buildExamples.js --watch",
     "build": "node ./scripts/build.js"
   },
   "jest": {
