feat (scripts): improve testing and building scripts

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
   "env": {
     "development": {
-      "presets": ["react", "es2016", "es2017", "stage-0"],
-      "plugins": ["external-helpers"]
+      "presets": ["react", "es2016", "es2017", "stage-0"]
     },
     "test": {
       "presets": ["react", "es2016", "es2017", "stage-0"],
