--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ node_modules/
 jspm_packages/
 package-lock.json
 
-# Build
-/dist/
+# Builds
+/dist
 
 # Typescript v1 declaration files
 typings/
