--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint-fix": "standard --fix",
+    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/!(bundle).js' && standard --fix",
     "build-examples": "node ./scripts/buildExamples.js",
     "build-examples-watch": "node ./scripts/buildExamples.js --watch",
-    "build": "node ./scripts/build.js"
+    "build": "node ./scripts/build.js",
+    "build-toc": "node ./scripts/buildToc.js"
   },
   "jest": {
     "snapshotSerializers": [
@@ -63,12 +64,10 @@
     "react": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
     "babel-core": "6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "7.1.1",
     "babel-minify": "^0.2.0",
-    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -82,8 +81,10 @@
     "enzyme-to-json": "^1.5.1",
     "jest": "20.0.4",
     "jest-html": "^1.3.4",
+    "markdown-toc": "^1.1.0",
     "moment": "2.18.1",
     "pre-push": "0.1.1",
+    "prettier": "^1.6.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-test-renderer": "^15.6.1",
@@ -102,9 +103,6 @@
     "parser": "babel-eslint",
     "env": [
       "jest"
-    ],
-    "ignore": [
-      "dist/*"
     ]
   },
   "pre-push": [
