--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-easy-state",
-  "version": "3.0.1",
-  "description": "React Easy State provides a healthy balance of local and global state management in a simple, scalable way",
+  "version": "4.0.0",
+  "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es5.js",
   "module": "dist/es.es5.js",
   "files": [
@@ -58,7 +58,7 @@
     "es6 proxy"
   ],
   "dependencies": {
-    "@nx-js/observer-util": "^3.1.3"
+    "@nx-js/observer-util": "^4.0.0"
   },
   "peerDependencies": {
     "react": "*"
