remove unneeded decorators babel plugin

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,11 @@
 {
   "env": {
     "development": {
-      "presets": ["react", "es2016", "es2017", "stage-0"],
-      "plugins": ["transform-decorators-legacy"]
+      "presets": ["react", "es2016", "es2017", "stage-0"]
     },
     "test": {
       "presets": ["react", "es2016", "es2017", "stage-0"],
-      "plugins": ["transform-es2015-modules-commonjs", "transform-decorators-legacy"]
+      "plugins": ["transform-es2015-modules-commonjs"]
     }
   }
 }
