--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es5.js",
   "module": "dist/es.es5.js",
+  "types": "types/index.d.ts",
   "files": [
     "dist"
   ],
