fix(coverage): remove stopwatch example from coverage

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "**/src/**",
       "**/examples/**",
       "!**/examples/**/dist/**",
-      "!**/examples/**/index.jsx"
+      "!**/examples/**/index.jsx",
+      "!**/examples/stopWatch/**"
     ]
   },
   "author": {
