feat(debugger): add devtool support

--- a/package.json
+++ b/package.json
@@ -107,6 +107,9 @@
     "parser": "babel-eslint",
     "env": [
       "jest"
+    ],
+    "globals": [
+      "__REACT_EASY_STATE_DEVTOOL__"
     ]
   },
   "pre-push": [
