--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "jest": {
     "snapshotSerializers": [
-      "./node_modules/jest-html"
+      "enzyme-to-json/serializer"
     ],
     "collectCoverageFrom": [
       "**/src/**",
@@ -33,7 +33,8 @@
       "!**/examples/**/dist/**",
       "!**/examples/**/index.jsx",
       "!**/examples/stopWatch/**"
-    ]
+    ],
+    "setupTestFrameworkScriptFile": "./scripts/testSetup.js"
   },
   "author": {
     "name": "Miklos Bertalan",
@@ -68,35 +69,35 @@
   },
   "devDependencies": {
     "@types/react": "^16.0.35",
-    "babel-core": "6.25.0",
+    "babel-core": "6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "7.1.1",
-    "babel-minify": "^0.2.0",
+    "babel-loader": "7.1.2",
+    "babel-minify": "^0.3.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "buble": "^0.15.2",
+    "buble": "^0.19.3",
     "classnames": "2.2.5",
-    "coveralls": "^2.13.1",
+    "coveralls": "^3.0.0",
     "del": "^3.0.0",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^1.5.1",
-    "jest": "20.0.4",
-    "jest-html": "^1.3.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
+    "jest": "^22.3.0",
     "markdown-toc": "^1.1.0",
-    "moment": "2.18.1",
+    "moment": "2.20.1",
     "pre-push": "0.1.1",
     "prettier": "^1.6.1",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-test-renderer": "^15.6.1",
-    "rollup": "^0.55.5",
+    "react": "^16.3.0-alpha.1",
+    "react-dom": "^16.3.0-alpha.1",
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "rollup": "^0.56.0",
     "rollup-plugin-auto-external": "^1.0.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "sinon": "3.1.0",
+    "sinon": "^4.3.0",
     "standard": "10.0.3",
     "webpack": "^3.5.2"
   },
