--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "**/examples/**",
       "!**/examples/**/dist/**",
       "!**/examples/**/index.jsx",
-      "!**/examples/stopWatch/**"
+      "!**/examples/stopWatch/**",
+      "!**/examples/beerFinder/**"
     ],
     "setupTestFrameworkScriptFile": "./scripts/testSetup.js"
   },
@@ -98,7 +99,11 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "sinon": "^4.3.0",
     "standard": "10.0.3",
-    "webpack": "^3.5.2"
+    "webpack": "^3.5.2",
+    "axios": "^0.17.1",
+    "material-ui": "^1.0.0-beta.34",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui-search-bar": "^1.0.0-beta.4"
   },
   "engines": {
     "node": ">=6.0.0"
@@ -107,9 +112,6 @@
     "parser": "babel-eslint",
     "env": [
       "jest"
-    ],
-    "globals": [
-      "__REACT_EASY_STATE_DEVTOOL__"
     ]
   },
   "pre-push": [
