--- a/package.json
+++ b/package.json
@@ -99,11 +99,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "sinon": "^4.3.0",
     "standard": "10.0.3",
-    "webpack": "^3.5.2",
-    "axios": "^0.17.1",
-    "material-ui": "^1.0.0-beta.34",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "material-ui-search-bar": "^1.0.0-beta.4"
+    "webpack": "^3.5.2"
   },
   "engines": {
     "node": ">=6.0.0"
