feat(examples): add codesandbox playgrounds

--- a/examples/todo-mvc/package.json
+++ b/examples/todo-mvc/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-easy-state": "^5.0.0",
