--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "buble": "^0.19.3",
+    "classnames": "2.2.5",
     "coveralls": "^3.0.0",
     "del": "^3.0.0",
     "enzyme": "^3.3.0",
