--- a/examples/beer-finder/package.json
+++ b/examples/beer-finder/package.json
@@ -4,20 +4,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "material-ui": "^1.0.0-beta.34",
-    "material-ui-icons": "^1.0.0-beta.17",
     "material-ui-search-bar": "^1.0.0-beta.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-easy-state": "^5.0.0",
-    "react-scripts": "1.1.1",
-    "serve": "^6.4.11"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-easy-state": "^6.0.3",
+    "react-scripts": "2.0.4",
+    "serve": "^10.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
