--- a/examples/stop-watch/package.json
+++ b/examples/stop-watch/package.json
@@ -4,16 +4,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "moment": "^2.20.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-easy-state": "^5.0.0",
-    "react-scripts": "1.1.1"
+    "moment": "^2.22.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-easy-state": "^6.0.3",
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
