--- a/package.json
+++ b/package.json
@@ -92,9 +92,9 @@
     "moment": "2.20.1",
     "pre-push": "0.1.1",
     "prettier": "^1.6.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-test-renderer": "^16.3.0",
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0",
+    "react-test-renderer": "^16.7.0-alpha.0",
     "rollup": "^0.56.0",
     "rollup-plugin-auto-external": "^1.0.0",
     "rollup-plugin-babel": "^3.0.2",
