--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-easy-state",
   "version": "6.0.5",
-  "description":
-    "React state management with a minimal API. Made with ES6 Proxies.",
+  "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
   "types": "types/index.d.ts",
-  "files": ["dist", "types"],
+  "files": [
+    "dist",
+    "types"
+  ],
   "scripts": {
     "test": "jest --coverage",
     "test-watch": "jest --watch",
@@ -14,8 +16,7 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint-fix":
-      "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
     "unlink-examples": "node ./scripts/unlinkExamples.js",
@@ -90,8 +91,13 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "env": ["jest"],
-    "ignore": ["**/build/**", "**/node_modules/**"]
+    "env": [
+      "jest"
+    ],
+    "ignore": [
+      "**/build/**",
+      "**/node_modules/**"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
@@ -105,5 +111,8 @@
     "setupTestFrameworkScriptFile": "./scripts/testSetup.js",
     "testURL": "http://react-easy-state.js"
   },
-  "pre-push": ["lint", "test"]
+  "pre-push": [
+    "lint",
+    "test"
+  ]
 }
