--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "prettier": "^1.6.1",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-test-renderer": "^16.7.0-alpha.0",
     "react-testing-library": "^5.3.0",
     "rollup": "^0.56.0",
