--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-easy-state",
-  "version": "6.0.5",
-  "description":
-    "React state management with a minimal API. Made with ES6 Proxies.",
+  "version": "6.0.6",
+  "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
   "types": "types/index.d.ts",
-  "files": ["dist", "types"],
+  "files": [
+    "dist",
+    "types"
+  ],
   "scripts": {
     "test": "jest --coverage",
     "test-watch": "jest --watch",
@@ -14,8 +16,7 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint-fix":
-      "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
     "unlink-examples": "node ./scripts/unlinkExamples.js",
@@ -23,7 +24,9 @@
     "build-toc": "node ./scripts/buildToc.js"
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "collectCoverageFrom": [
       "**/src/**",
       "**/examples/**/*.{js,jsx}",
@@ -104,8 +107,17 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "env": ["browser", "jest"],
-    "ignore": ["**/build/**", "**/node_modules/**"]
+    "env": [
+      "browser",
+      "jest"
+    ],
+    "ignore": [
+      "**/build/**",
+      "**/node_modules/**"
+    ]
   },
-  "pre-push": ["lint", "test"]
+  "pre-push": [
+    "lint",
+    "test"
+  ]
 }
