--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "react-easy-state",
   "version": "6.1.0-beta.0",
-  "description": "React state management with a minimal API. Made with ES6 Proxies.",
+  "description":
+    "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
   "types": "types/index.d.ts",
-  "files": [
-    "dist",
-    "types"
-  ],
+  "files": ["dist", "types"],
   "scripts": {
     "test": "jest --coverage",
     "test-watch": "jest --watch",
@@ -16,7 +14,8 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "lint-fix":
+      "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
     "unlink-examples": "node ./scripts/unlinkExamples.js",
@@ -75,31 +74,26 @@
     "moment": "2.20.1",
     "pre-push": "0.1.1",
     "prettier": "^1.6.1",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.7.0-alpha.0",
+    "react-test-renderer": "^16.8.0-alpha.1",
     "react-testing-library": "^5.3.0",
     "rollup": "^0.56.0",
     "rollup-plugin-auto-external": "^1.0.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "sinon": "^4.3.0",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "styled-components": "^4.1.3"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "standard": {
     "parser": "babel-eslint",
-    "env": [
-      "browser",
-      "jest"
-    ],
-    "ignore": [
-      "**/build/**",
-      "**/node_modules/**"
-    ]
+    "env": ["browser", "jest"],
+    "ignore": ["**/build/**", "**/node_modules/**"]
   },
   "jest": {
     "collectCoverageFrom": [
@@ -113,8 +107,5 @@
     "setupTestFrameworkScriptFile": "./scripts/testSetup.js",
     "testURL": "http://react-easy-state.com"
   },
-  "pre-push": [
-    "lint",
-    "test"
-  ]
+  "pre-push": ["lint", "test"]
 }
