--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "types": "types/index.d.ts",
   "files": ["dist", "types"],
   "scripts": {
-    "test": "jest --coverage",
-    "test-watch": "jest --watch",
-    "test-update": "jest --updateSnapshot",
+    "test-native": "jest --config ./jest.native.json",
+    "test-web": "jest --config ./jest.web.json --coverage ",
+    "test": "npm run test-web && npm run test-native",
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
@@ -52,7 +52,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "react-native": "*"
   },
   "devDependencies": {
     "@types/react": "^16.0.35",
@@ -77,6 +78,7 @@
     "prettier": "^1.6.1",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-native": "^0.58.3",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.8.0-alpha.1",
     "react-testing-library": "^5.3.0",
@@ -95,18 +97,6 @@
     "parser": "babel-eslint",
     "env": ["browser", "jest"],
     "ignore": ["**/build/**", "**/node_modules/**"]
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "**/src/**",
-      "**/examples/**/*.{js,jsx}",
-      "!**/examples/**/build/**",
-      "!**/examples/**/index.js",
-      "!**/examples/stop-watch/**",
-      "!**/examples/**/beer-finder/**"
-    ],
-    "setupTestFrameworkScriptFile": "./scripts/testSetup.js",
-    "testURL": "http://react-easy-state.com"
   },
   "pre-push": ["lint", "test"]
 }
