--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "react-easy-state",
   "version": "6.1.0-beta.0",
-  "description": "React state management with a minimal API. Made with ES6 Proxies.",
+  "description":
+    "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
   "types": "types/index.d.ts",
-  "files": [
-    "dist",
-    "types"
-  ],
+  "files": ["dist", "types"],
   "scripts": {
     "test-native": "jest --config ./jest.native.json",
     "test-web": "jest --config ./jest.web.json --coverage ",
@@ -16,7 +14,8 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "lint-fix":
+      "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
     "unlink-examples": "node ./scripts/unlinkExamples.js",
@@ -49,48 +48,46 @@
     "es6 proxy"
   ],
   "dependencies": {
-    "@nx-js/observer-util": "^4.1.1"
+    "@nx-js/observer-util": "^4.2.1"
   },
   "peerDependencies": {
-    "react": "*"
-  },
-  "optionalDependencies": {
+    "react": "*",
     "react-dom": "*",
     "react-native": "*"
   },
   "devDependencies": {
-    "@types/react": "^16.0.35",
-    "babel-core": "6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "7.1.2",
-    "babel-minify": "^0.3.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "buble": "^0.19.3",
-    "classnames": "2.2.5",
-    "coveralls": "^3.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.7.22",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "buble": "^0.19.6",
+    "classnames": "2.2.6",
+    "coveralls": "^3.0.2",
     "del": "^3.0.0",
-    "jest": "^23.6.0",
-    "jest-dom": "^2.1.1",
-    "markdown-toc": "^1.1.0",
-    "moment": "2.20.1",
+    "jest": "^24.0.0",
+    "jest-dom": "^3.0.1",
+    "markdown-toc": "^1.2.0",
+    "moment": "2.24.0",
     "pre-push": "0.1.1",
-    "prettier": "^1.6.1",
+    "prettier": "^1.16.1",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "react-native": "^0.58.3",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.8.0-alpha.1",
-    "react-testing-library": "^5.3.0",
+    "react-testing-library": "^5.4.4",
     "rollup": "^1.1.2",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "sinon": "^4.3.0",
-    "standard": "^10.0.3",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "sinon": "^7.2.3",
+    "standard": "^12.0.1",
     "styled-components": "^4.1.3"
   },
   "engines": {
@@ -98,17 +95,8 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "env": [
-      "browser",
-      "jest"
-    ],
-    "ignore": [
-      "**/build/**",
-      "**/node_modules/**"
-    ]
+    "env": ["browser", "jest"],
+    "ignore": ["**/build/**", "**/node_modules/**"]
   },
-  "pre-push": [
-    "lint",
-    "test"
-  ]
+  "pre-push": ["lint", "test"]
 }
