--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "react-easy-state",
   "version": "6.1.0-beta.0",
-  "description": "React state management with a minimal API. Made with ES6 Proxies.",
+  "description":
+    "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
   "types": "types/index.d.ts",
-  "files": [
-    "dist",
-    "types"
-  ],
+  "files": ["dist", "types"],
   "scripts": {
     "test-native": "jest --config ./jest.native.json",
     "test-web": "jest --config ./jest.web.json --coverage ",
@@ -16,7 +14,8 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
-    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "lint-fix":
+      "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
     "unlink-examples": "node ./scripts/unlinkExamples.js",
@@ -52,7 +51,9 @@
     "@nx-js/observer-util": "^4.2.1"
   },
   "peerDependencies": {
-    "react": "*",
+    "react": "*"
+  },
+  "optionalDependencies": {
     "react-dom": "*",
     "react-native": "*"
   },
@@ -67,8 +68,6 @@
     "@types/react": "^16.7.22",
     "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "buble": "^0.19.6",
     "classnames": "2.2.6",
     "coveralls": "^3.0.2",
     "del": "^3.0.0",
@@ -97,17 +96,8 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "env": [
-      "browser",
-      "jest"
-    ],
-    "ignore": [
-      "**/build/**",
-      "**/node_modules/**"
-    ]
+    "env": ["browser", "jest"],
+    "ignore": ["**/build/**", "**/node_modules/**"]
   },
-  "pre-push": [
-    "lint",
-    "test"
-  ]
+  "pre-push": ["lint", "test"]
 }
