--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "types"
   ],
   "scripts": {
-    "test-native": "jest --config ./jest.native.json",
-    "test-web": "jest --config ./jest.web.json --coverage ",
+    "test-native": "jest --config ./jest.native.json && mv coverage/coverage-final.json coverage/coverage-native.json",
+    "test-web": "jest --config ./jest.web.json && mv coverage/coverage-final.json coverage/coverage-web.json",
     "test": "npm run test-web && npm run test-native",
+    "coverage": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage",
     "test-builds": "node ./scripts/testBuilds.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "standard",
@@ -49,7 +50,9 @@
     "es6 proxy"
   ],
   "dependencies": {
-    "@nx-js/observer-util": "^4.2.1"
+    "@nx-js/observer-util": "^4.2.1",
+    "nyc": "^13.1.0",
+    "save-dev": "^2.0.0"
   },
   "peerDependencies": {
     "react": "*"
