--- a/examples/native-clock/package.json
+++ b/examples/native-clock/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-easy-state": "^6.0.6",
+    "react": "^16.8.0-alpha.1",
+    "react-easy-state": "^6.1.0-beta.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
