--- a/examples/stop-watch/package.json
+++ b/examples/stop-watch/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "moment": "^2.22.2",
-    "react-easy-state": "^6.0.3",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-easy-state": "^6.1.0-beta.1",
     "react-scripts": "2.0.4"
   },
   "scripts": {
