--- a/examples/todo-mvc/package.json
+++ b/examples/todo-mvc/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "react-easy-state": "^6.0.3",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-easy-state": "^6.1.0-beta.1",
     "react-scripts": "2.0.4"
   },
   "scripts": {
