--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-easy-state",
-  "version": "6.1.0-beta.2",
+  "version": "6.1.0-beta.3",
   "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
@@ -50,9 +50,7 @@
     "es6 proxy"
   ],
   "dependencies": {
-    "@nx-js/observer-util": "^4.2.1",
-    "nyc": "^13.1.0",
-    "save-dev": "^2.0.0"
+    "@nx-js/observer-util": "^4.2.1"
   },
   "peerDependencies": {
     "react": "*"
@@ -78,11 +76,11 @@
     "jest-dom": "^3.0.1",
     "markdown-toc": "^1.2.0",
     "moment": "2.24.0",
+    "nyc": "^13.1.0",
     "pre-push": "0.1.1",
     "prettier": "^1.16.1",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
-    "react-native": "^0.58.3",
     "react-native-testing-library": "^1.5.0",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.8.0-alpha.1",
