--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test-builds": "node ./scripts/testBuilds.js",
     "lint": "standard",
     "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "install-examples": "node ./scripts/installExamples.js",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
     "unlink-examples": "node ./scripts/unlinkExamples.js",
@@ -63,6 +64,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.7.22",
@@ -79,6 +81,7 @@
     "prettier": "^1.16.1",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-native": "^0.58.3",
     "react-native-testing-library": "^1.5.0",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.8.0-alpha.1",
