improve coveralls reporting

--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "types"
   ],
   "scripts": {
-    "test-native": "NATIVE=true jest --config ./jest.native.json && rm coverage/coverage-final.json",
-    "test-web": "jest --config ./jest.web.json && mv coverage/coverage-final.json coverage/coverage-web.json",
-    "test": "npm run test-web && npm run test-native && npm run coverage",
-    "coverage": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "test-native": "NATIVE=true jest --config ./jest.native.json && mv coverage/lcov.info coverage/lcov-native.info",
+    "test-web": "jest --config ./jest.web.json && mv coverage/lcov.info coverage/lcov-web.info",
+    "test": "npm run test-web && npm run test-native",
+    "coveralls": "lcov-result-merger './coverage/*.info' './coverage/lcov.info' && cat ./coverage/lcov.info | coveralls",
     "test-builds": "node ./scripts/testBuilds.js",
     "lint": "standard",
     "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
