fix hook order in view

--- a/examples/contacts/package.json
+++ b/examples/contacts/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-easy-state": "^6.1.0",
     "react-scripts": "2.0.4"
   },
