--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
     "nyc": "^13.1.0",
     "pre-push": "0.1.1",
     "prettier": "^1.16.1",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-native": "^0.58.3",
     "react-native-testing-library": "^1.5.0",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.8.0-alpha.1",
+    "react-test-renderer": "^16.8.0",
     "react-testing-library": "^5.4.4",
     "rollup": "^1.1.2",
     "rollup-plugin-auto-external": "^2.0.0",
