--- a/examples/beer-finder/package.json
+++ b/examples/beer-finder/package.json
@@ -8,8 +8,8 @@
     "@material-ui/icons": "^1.0.0",
     "axios": "^0.18.0",
     "material-ui-search-bar": "^1.0.0-beta.4",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-easy-state": "^6.1.0",
     "react-scripts": "2.0.4"
   },
