--- a/examples/clock/package.json
+++ b/examples/clock/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "dependencies": {
     "moment": "^2.22.2",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-easy-state": "^6.1.0",
     "react-scripts": "2.0.4"
   },
